Update de interfaz prehecha